--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import "../../styles/global.css";
 ---
 
 <html lang="en">
@@ -11,8 +11,6 @@ import "../styles/global.css";
         <title>Astro</title>
     </head>
     <body>
-        <h1 class="text-red-400">Astro</h1>
-        <h2>Esta es mi prueba de pagina web</h2>
-        <a class="text-blue-500 decoration-1 decoration-blue-500 decoration-dashed" href="/blog">Ir al blog</a>
+        <h1 class="text-blue-700">Blog</h1>
     </body>
 </html>
